--- a/resurse/css/general500.css
+++ b/resurse/css/general500.css
@@ -8,11 +8,14 @@ html {
     font-size: 7px;
     font-family: Oxanium;
     --culoare-text: #050301;
-    background-color: #C9A0A0;
 }
 
 body {
-    display: block;
+    --margine-pagina: 5px;
+}
+
+body.dark {
+    --margine-pagina: 5px;
 }
 
 h1, h2, h3  {
@@ -36,7 +39,7 @@ p, details, #cr {
     height: 20px;
     display: block;
     margin: 5px;
-    border: 2px solid #5C1E20;
+    /* border: 2px solid #5C1E20; */
     border-radius: 5px 5px 20px;
     text-decoration: none;
     /* text-align: center; */
@@ -61,7 +64,7 @@ p, details, #cr {
 
 .taburi-iframe > a:hover {
     /* position: absolute; */
-    background-color: #5C1E20;
+    /* background-color: #5C1E20; */
     color: #C9A0A0;
     transition: 0.3s;
 }
@@ -79,7 +82,7 @@ p, details, #cr {
 }
 
 .zona {
-    border: 5px solid #421112;
+    /* border: 5px solid #421112; */
     border-radius: 20px;
     overflow: hidden;
 }
@@ -95,7 +98,7 @@ p, details, #cr {
     justify-content: flex-start;
     align-items: center;
     align-self: center;
-    background-color: #C9A0A0;
+    /* background-color: #C9A0A0; */
     overflow: hidden;
     overflow-x: auto;
     width: 100%;
@@ -149,18 +152,18 @@ p, details, #cr {
 }
 
 #desprenoi, #inspiratie, #ceoferim {
-    border: 5px solid #5C1E20;
+    /* border: 5px solid #5C1E20; */
     border-radius: 15px 50px;
-    background-color: #C9A0A0;
+    /* background-color: #C9A0A0; */
     padding: 10px;
     box-sizing: border-box;
     justify-content: flex-start;
 }
 
 footer {
-    border: 5px solid #5C1E20;
+    /* border: 5px solid #5C1E20; */
     border-radius: 15px 50px;
-    background-color: #A77272;
+    /* background-color: #A77272; */
     padding: 10px;
     margin: 10px;
     margin-bottom: 10px;
