--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -13,14 +13,16 @@
 <link rel="stylesheet" href="/resurse/css/general.css" type="text/css">
 <link rel="stylesheet" href="/resurse/css/general1000.css" type="text/css" media="screen and (max-width:1000px)">
 <link rel="stylesheet" href="/resurse/css/general500.css" type="text/css" media="screen and (max-width:500px)">
-<!-- <link rel="stylesheet" href="/resurse/css/nav.css" type="text/css"> -->
-<link rel="stylesheet" href="/resurse/scss/nav_output.css" type="text/css">
-<!-- <link rel="stylesheet" href="/resurse/css/nav1000.css" type="text/css" media="screen and (max-width:1000px)"> -->
-<link rel="stylesheet" href="/resurse/scss/nav1000_output.css" type="text/css" media="screen and (max-width:1000px)">
-<!-- <link rel="stylesheet" href="/resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)"> -->
-<link rel="stylesheet" href="/resurse/scss/nav500_output.css" type="text/css" media="screen and (max-width:500px)">
-<link rel="stylesheet" href="/resurse/scss/nav500_anim_output.css" type="text/css" media="screen and (max-width:500px)">
+<link rel="stylesheet" href="/resurse/css/nav.css" type="text/css">
+<!-- <link rel="stylesheet" href="/resurse/scss/nav_output.css" type="text/css"> -->
+<link rel="stylesheet" href="/resurse/css/nav1000.css" type="text/css" media="screen and (max-width:1000px)">
+<!-- <link rel="stylesheet" href="/resurse/scss/nav1000_output.css" type="text/css" media="screen and (max-width:1000px)"> -->
+<link rel="stylesheet" href="/resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)">
+<!-- <link rel="stylesheet" href="/resurse/scss/nav500_output.css" type="text/css" media="screen and (max-width:500px)">
+<link rel="stylesheet" href="/resurse/scss/nav500_anim_output.css" type="text/css" media="screen and (max-width:500px)"> -->
 <link rel="stylesheet" href="/resurse/css/galerie_animata.css" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&family=Press+Start+2P&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<script src="/resurse/js/schimba_tema.js"></script>
