Adaugat counter produse

--- a/views/pagini/produse.ejs
+++ b/views/pagini/produse.ejs
@@ -122,6 +122,7 @@
         
         <section id="produse">
             <h2>Produse</h2>
+            <p id="count-produse"></p>
             <div class="grid-produse">
                 <% for( let prod of locals.produse) { %>
                     <article class="produs" >
