--- a/resurse/css/nav.css
+++ b/resurse/css/nav.css
@@ -34,10 +34,10 @@ ol.meniu {
   padding: 0;
 }
 ol.meniu li {
-  background-color: #A77272;
+  background-color: var(--culoare-semideschisa);
   width: 35%;
   height: 40px;
-  border: 2px solid #5C1E20;
+  border: 2px solid var(--culoare-main);
   border-top: none;
   text-align: center;
   font-weight: bold;
@@ -46,7 +46,7 @@ ol.meniu li {
   text-shadow: 0 -15px rgba(255, 255, 255, 0);
 }
 ol.meniu li:hover {
-  background-color: #5C1E20;
+  background-color: var(--culoare-main);
   text-shadow: 0 0 2px white;
 }
 ol.meniu li:hover > .txt-icon a,
@@ -62,7 +62,7 @@ ol.meniu li ul {
   padding: 0;
   animation: animatie-submeniu 0.5s linear forwards;
   transform-origin: 50% 0;
-  background-color: #A77272;
+  background-color: var(--culoare-semideschisa);
   list-style-type: none;
   width: 100%;
 }
