--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -1,15 +1,23 @@
-<script src="/resurse/js/tema.js"></script>
+<!-- <script src="/resurse/js/tema.js"></script> -->
 <header>
     <img id="logo" src="/resurse/imagini/logo.png" alt="logo">
     <h1 id="titlu">FansTOME</h1><br>
-    <div id="container-switch">
+    <!-- <div id="container-switch">
         <i class="fa-solid fa-sun"></i>
         <div class="form-check form-switch" id="switch-tema">
             <input class="form-check-input" type="checkbox" id="schimba_tema" role="switch"></input>
-            <!-- <label class="form-check-label" for="schimba_tema">Tema</label> -->
         </div>
         <i class="fa-solid fa-moon"></i>
-    </div>
+    </div> -->
+
+    <div id="container-switch">
+        <label for="tema-select">Tema:</label>
+        <select id="tema-select" class="form-select">
+            <option value="">Main</option>
+            <option value="dark">Dark</option>
+            <option value="albastru">Albastra</option>
+    </select>
+</div>
     
     
 </header>
