--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -44,7 +44,6 @@ table {
 
 /**************************************************************************************/
 
-/* voi importa fonturi cu licenta free use, toate resursele sunt in readme*/
 @font-face {
     font-family: Pixeloid;
     src: url("../fonts/PixeloidSans-Bold.ttf");
@@ -70,6 +69,7 @@ html {
 
 body {
     --culoare-text: #050301;
+    --culoare-text-hover: white;
     --latime-harta: 400px;
     --inaltime-harta: 400px;
     --margine-pagina: 20px;
@@ -78,6 +78,9 @@ body {
     --culoare-semideschisa: #A77272;
     --culoare-deschisa: #C9A0A0;
     --culoare-inchisa: #421112;
+    --culoare-tabel-head: #8A5151;
+    --culoare-tabel-body-hover: #f6cccc;
+    --culoare-tabel-hover: white;
     background-color: var(--culoare-deschisa);
     margin-left: var(--margine-pagina);
     margin-right: var(--margine-pagina);
@@ -89,6 +92,7 @@ body {
 
 body.dark {
     --culoare-text: #cfcfcf;
+    --culoare-text-hover: black;
     --latime-harta: 400px;
     --inaltime-harta: 400px;
     --margine-pagina: 20px;
@@ -97,6 +101,9 @@ body.dark {
     --culoare-semideschisa: #5C1E20;
     --culoare-deschisa: #421112;
     --culoare-inchisa: #C9A0A0;
+    --culoare-tabel-head: #5C1E20;
+    --culoare-tabel-body-hover: #8A5151;
+    --culoare-tabel-hover: #A77272;
     margin-left: var(--margine-pagina);
     margin-right: var(--margine-pagina);
     line-height: 1.5;
@@ -107,6 +114,7 @@ body.dark {
 
 body.albastru {
     --culoare-text: #363636;
+    --culoare-text-hover: black;
     --latime-harta: 400px;
     --inaltime-harta: 400px;
     --margine-pagina: 20px;
@@ -115,6 +123,9 @@ body.albastru {
     --culoare-semideschisa: #5FB7E5;
     --culoare-deschisa: #97D0E4;
     --culoare-inchisa: #30648E;
+    --culoare-tabel-head: #0097E5;
+    --culoare-tabel-body-hover: #5FB7E5;
+    --culoare-tabel-hover: #6cc4e4;
     background-color: var(--culoare-deschisa);
     margin-left: var(--margine-pagina);
     margin-right: var(--margine-pagina);
@@ -321,7 +332,6 @@ header {
     height: 600px;
 }
 
-/* link catre inceputul paginii */
 #link-top {
     position: fixed;
     bottom: 1.3em;
@@ -391,7 +401,6 @@ figure figcaption {
 .tabel thead th, .tabel tbody td {
     padding: 30px;
     text-align: center;
-    /* border: 2px solid var(--culoare-inchisa); */
     transition: all 0.3s ease-in-out;
 }
 
@@ -404,18 +413,18 @@ figure figcaption {
 }
 
 .tabel thead tr:nth-child(1), .tabel thead tr:nth-child(3) {
-    background-color: #8A5151;
+    background-color: var(--culoare-tabel-head);
 }
 
 .tabel tbody td:hover {
-    background-color: white;
+    background-color: var(--culoare-tabel-hover);
+    color: var(--culoare-text);
 }
 
 .tabel tbody tr:hover td:not(:hover) {
-    background-color: #f6cccc;
+    background-color: var(--culoare-tabel-body-hover);
 }
 
-/* CAPTION SUB TABEL */
 .tabel caption {
     border: none;
     caption-side: bottom;
@@ -429,7 +438,6 @@ figure figcaption {
     border: none;
 }
 
-/* BONUS FORMULA MATHML STILIZATA */
 #formula {
     padding-top: 10px;
     font-size: 1.3rem;
@@ -471,36 +479,6 @@ figcaption {
     display: none;
 }
 
-
-/*LINK CONTINUT PAGINE TO DO ANIMATIE GRANDIENT OVAL*/
-/* :not(.meniu) a:not(.iframevid) {
-    display: inline-block;
-    background-image: radial-gradient(ellipse, white 0%, white 40%, transparent 80%, transparent 100%);
-    background-position: center;
-    background-size: 0 0;
-    background-repeat: no-repeat;
-    transition: background-size 0.8s ease-in-out;
-}
-
-:not(.meniu) a:hover:not(.iframevid) {
-    background-size: 100% 60%;
-} */
-
-/* a:not(.iframevid):hover {
-    background-image: radial-gradient(0% black, 40% black, 80% transparent, 100% transparent);
-    background-position: center;
-    background-size: 0;
-    transition: background-image 0.5s ease-in-out;
-  }
-  */ 
-
-/* .meniu a {
-    background-image: none;
-}
-.meniu a:hover {
-    background-image: none;
-} */
-
 a[href^="http"]:not(.iframevid):visited {
     color: var(--culoare-main);
 }
@@ -515,7 +493,6 @@ a[href^="http"]:not(.iframevid):hover::before {
     transition: all 0.2s ease-in-out;
 }
 
-/*LINK ACTIVE BORDER*/
 :not(.meniu) > a:not(.iframevid):active {
     border: 1.5px solid black;
 }
@@ -603,12 +580,9 @@ video {
 	transform-origin: 0 0;
 	transform: rotateX(180deg) skew(-45deg) scaleY(0.7) translate(0.3rem, -0.5rem); 
 	opacity: 0.55;
-    /* mask-image: repeating-linear-gradient(0deg, black 0px, black 1px, transparent 1px, transparent 2px); */
     mask-image: repeating-radial-gradient(ellipse at center bottom, black 0px, black 5px, transparent 6px, transparent 10px);
     mask-repeat: repeat;
     mask-size: 40% 100%;
-    /* mask-position: center -30px; */
-    /* mask-origin: ; */
 }
 
 #text:hover + #text-reflectat {
@@ -633,6 +607,7 @@ video {
     display: flex;
     align-items: center;
     gap: 0.8rem;
+    width: 100px !important;
 }
 
 .data, .desc, .disp, .isbn {
@@ -654,30 +629,12 @@ video {
     justify-content: center;
 }
 
-/* #switch-tema > label {
-    padding-left: 0.5rem;
-    display: inline-block;
-    position: relative;
-    text-align: center;
-    align-content: center;
-}
-
-#switch-tema > label::before {
-    content: "\f185";
-    font-family: FontAwesome;
-    position: absolute;
-} */
-
-
-
 @keyframes efect-apa {
     0% {
         mask-position: 0 0;
-        /* mark-image: repeating-radial-gradient(ellipse at 50%, black 0px, black 5px, transparent 6px, transparent 10px); */
     }
     100% {
         mask-position: 0 -40px;
-        /* mark-image: repeating-radial-gradient(ellipse at 50%, black 5px, black 10px, transparent 11px, transparent 16px); */
     }
 }
 
@@ -793,7 +750,6 @@ video {
 		margin-bottom:2cm;
 		margin-top:2cm;
 		counter-increment: page;
-			
 	}
 
 	@page:left{
@@ -806,11 +762,9 @@ video {
 		margin-left: 0.5cm;
 	}
 
-    
-
     @page:first {
         #banner {
-            display: block; /* Show banner on the first page */
+            display: block;
         }
     }
 
